Zmiana rozmiaru obrazka + poprawki do Lighthouse (audit w devtools Chrome)

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <p class="description">Wszystkie projekty możesz zobaczyć na moim profilu na GitHubie</p>
       <div class="portfolio-grid">
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/LOAN-CALCULATOR/" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/LOAN-CALCULATOR/" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/kalkulator_pozyczkowy.jpg" alt="obraz aplikacji kalkulatora">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -295,7 +295,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/LISTA-KSIAZEK" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/LISTA-KSIAZEK" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/lista_ksiazek.jpg" alt="obraz aplikacji listy książek">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -304,7 +304,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/TO-DOver3" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/TO-DOver3" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/lista_zadan.jpg" alt="obraz aplikacji listy zadań">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -314,7 +314,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/LISTA-ZAKUPOW" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/LISTA-ZAKUPOW" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/lista_zakupow.jpg" alt="obraz aplikacji listy zakupów">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -324,7 +324,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Biuro_Podrozy" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Biuro_Podrozy" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/materialize/biuro_podrozy.jpg" alt="obraz strony biura podróży">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -334,7 +334,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Biznes" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Biznes" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/materialize/biznes.jpg" alt="obraz strony biznesowej">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -344,7 +344,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Firma_IT" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Firma_IT" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/materialize/firma_IT.jpg" alt="obraz strony firmy z branży IT">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -354,7 +354,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Panel_Logowania" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Panel_Logowania" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/materialize/panel_logowania.jpg" alt="obraz strony z panelem logowania ">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -364,7 +364,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Projektowanie/" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/Materialize-Projektowanie/" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/materialize/projektowanie.jpg" alt="obraz strony o projektowaniu">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -373,7 +373,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/POGODA/" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/POGODA/" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/pogoda.jpg" alt="obraz aplikacji o pogodzie">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -382,7 +382,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/REDDIT" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/REDDIT" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/reddit.jpg" alt="obraz aplikacji wyszukiwarki reddit">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -391,7 +391,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/GITHUB-USERS-FINDER" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/GITHUB-USERS-FINDER" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/github_wyszukiwarka.jpg" alt="obraz aplikacji wyszukiwarki użytkowników GitHuba">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -400,7 +400,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/WEEKLY-WEBDEV-CHALLENGE-1" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/WEEKLY-WEBDEV-CHALLENGE-1" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/WeeklyWebDevChallenge_01.jpg" alt="obraz strony z zadania numer 1 WeeklyWebDevChallenge">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -409,7 +409,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/WEB_DEV_CHALLENGE_NR37" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/WEB_DEV_CHALLENGE_NR37" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/WeeklyWebDevChallenge_37.jpg" alt="obraz strony z zadania numer 37 WeeklyWebDevChallenge">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -418,7 +418,7 @@
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
-          <a class="portfolio-link" href="https://kp1976.github.io/NUMBER-GUESSER" target="_blank" rel="noreferrer">
+          <a class="portfolio-link" href="https://kp1976.github.io/NUMBER-GUESSER" target="_blank" rel="noopener">
             <img class="portfolio-example-img" src="img/Portfolio/zgadnij_liczbe.jpg" alt="obraz aplikacji zgadnij liczbę">
           </a>
           <div class="portfolio-example-description-wrapper">
@@ -437,13 +437,13 @@
         <br> kpawlowski1976@gmail.com
       </p>
       <div class="social-media">
-        <a class="link" href="https://www.facebook.com/KP1976PL" target="_blank" aria-label="Facebook" rel="noreferrer">
+        <a class="link" href="https://www.facebook.com/KP1976PL" target="_blank" aria-label="Facebook" rel="noopener">
           <i class="fab fa-facebook"></i>
         </a>
-        <a class="link" href="https://github.com/KP1976" target="_blank" aria-label="GitHub" rel="noreferrer">
+        <a class="link" href="https://github.com/KP1976" target="_blank" aria-label="GitHub" rel="noopener">
           <i class="fab fa-github"></i>
         </a>
-        <a class="link" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank" aria-label="LinkedIn" rel="noreferrer">
+        <a class="link" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank" aria-label="LinkedIn" rel="noopener">
           <i class="fab fa-linkedin-in"></i>
         </a>
       </div>
