Dodanie projektu "Gra w kafelki"

--- a/index.html
+++ b/index.html
@@ -426,6 +426,15 @@
             <p class="portfolio-example-description">Aplikacja sprawdza czy zgadłeś liczbę z&nbsp;przedziału od 1&nbsp;do 10. Masz na to trzy próby.</p>
           </div>
         </figure>
+        <figure class="portfolio-example-wrapper">
+          <a class="portfolio-link" href="https://kp1976.github.io/kafelki/" target="_blank" rel="noopener">
+            <img class="portfolio-example-img" src="img/Portfolio/Gra w kafelki.jpg" alt="obraz aplikacji gra w kafelki">
+          </a>
+          <div class="portfolio-example-description-wrapper">
+            <h3 class="portfolio-example-title">Gra w kafelki</h3>
+            <p class="portfolio-example-description">W grze musisz odkrywać pary kafelków o&nbsp;tym samym kolorze. Na końcu pokazuje Ci czas w&nbsp;jakim to zrobiłeś.</p>
+          </div>
+        </figure>
       </div>
     </section>
 
