--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
     crossorigin="anonymous">
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">.
   <title>Portfolio – Krzysztof Pawłowski</title>
 </head>
 
@@ -56,7 +56,8 @@
     <section class="header" id="home">
       <h1 class="greetings">Witam</h1>
       <h2 class="greetings-sub">na mojej stronie</h2>
-      <p class="description">Pracuję jako grafik komputerowy (operator DTP) i&nbsp;próbuję zostać front-end developerem.</p>
+      <p class="description">Pracuję jako grafik komputerowy (operator DTP) i&nbsp;próbuję zostać front-end
+        developerem.</p>
       <div class="self-picture-wrapper">
         <img class="self-picture" src="img/ja.jpg" alt="zdjęcie portretowe Krzysztofa Pawłowskiego">
       </div>
@@ -112,7 +113,8 @@
               <span class="desc-bold">Urząd miejski
                 <br>w Świnoujściu</span>
             </p>
-            <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+            <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
+              i&nbsp;obsługi systemu Windows
             </div>
             <div class="desc2">instalacja i wymiana kabli sieciowych</div>
           </div>
@@ -123,7 +125,8 @@
               <span class="desc-bold">Urząd miejski
                 <br>w Świnoujściu</span>
             </p>
-            <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+            <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
+              i&nbsp;obsługi systemu Windows
             </div>
             <div class="desc2">instalacja i wymiana kabli sieciowych</div>
           </div>
@@ -291,7 +294,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Kalkulator Pożyczkowy</h3>
-            <p class="portfolio-example-description">Aplikacja oblicza miesięczną ratę kredytu do spłacenia. Całkowitą kwotę pożyczki i&nbsp;zysk pożyczkodawcy.</p>
+            <p class="portfolio-example-description">Aplikacja oblicza miesięczną ratę kredytu do spłacenia. Całkowitą
+              kwotę pożyczki i&nbsp;zysk pożyczkodawcy.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -300,7 +304,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Lista Książek</h3>
-            <p class="portfolio-example-description">Baza danych książek, gdzie dodajemy tytuł, autora i&nbsp;cenę książki.</p>
+            <p class="portfolio-example-description">Baza danych książek, gdzie dodajemy tytuł, autora i&nbsp;cenę
+              książki.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -309,7 +314,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Lista Zadań</h3>
-            <p class="portfolio-example-description">Lista zadań do wykonania z&nbsp;możliwością kasowania, filtrowania i&nbsp;modyfikowania konkretnego zadania.
+            <p class="portfolio-example-description">Lista zadań do wykonania z&nbsp;możliwością kasowania, filtrowania
+              i&nbsp;modyfikowania konkretnego zadania.
             </p>
           </div>
         </figure>
@@ -319,7 +325,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Lista Zakupów</h3>
-            <p class="portfolio-example-description">Lista zakupów z&nbsp;możliwością kasowania i&nbsp;modyfikowania konkretnego produktu.
+            <p class="portfolio-example-description">Lista zakupów z&nbsp;możliwością kasowania i&nbsp;modyfikowania
+              konkretnego produktu.
             </p>
           </div>
         </figure>
@@ -329,7 +336,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Biuro Podróży</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią, wyszukiwarką i&nbsp;kontaktem.
+            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią,
+              wyszukiwarką i&nbsp;kontaktem.
             </p>
           </div>
         </figure>
@@ -339,7 +347,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Strona Biznesowa</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;lokalizacją za pomocą Google Maps.
+            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;lokalizacją za
+              pomocą Google Maps.
             </p>
           </div>
         </figure>
@@ -349,7 +358,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Strona IT</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością założenia konta.
+            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością
+              założenia konta.
             </p>
           </div>
         </figure>
@@ -359,7 +369,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Panel Administratora</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością dodawania i&nbsp;kasowania zadań, dodawania postów,
+            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością
+              dodawania i&nbsp;kasowania zadań, dodawania postów,
               kategorii&nbsp;i użytkowników.</p>
           </div>
         </figure>
@@ -369,7 +380,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Projektowanie</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią projektów podzieloną na kategorie.</p>
+            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią
+              projektów podzieloną na kategorie.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -378,7 +390,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Pogoda</h3>
-            <p class="portfolio-example-description">Aplikacja, która pokazuje różne czynniki pogodowe w&nbsp;danej lokalizacji z&nbsp;danych ze strony https://api.wunderground.com.</p>
+            <p class="portfolio-example-description">Aplikacja, która pokazuje różne czynniki pogodowe w&nbsp;danej
+              lokalizacji z&nbsp;danych ze strony https://api.wunderground.com.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -387,7 +400,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">REDDIT</h3>
-            <p class="portfolio-example-description">Wyszukiwarka postów REDDIT z&nbsp;sortowaniem i&nbsp;wyborem liczby wyników.</p>
+            <p class="portfolio-example-description">Wyszukiwarka postów REDDIT z&nbsp;sortowaniem i&nbsp;wyborem
+              liczby wyników.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -396,7 +410,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Wyszukiwarka GitHub</h3>
-            <p class="portfolio-example-description">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i&nbsp;najnowsze repozytoria.</p>
+            <p class="portfolio-example-description">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i&nbsp;najnowsze
+              repozytoria.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -405,7 +420,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">WebDevChallenge1</h3>
-            <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
+            <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie
+              z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -414,7 +430,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">WebDevChallenge37</h3>
-            <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
+            <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie
+              z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -423,7 +440,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Zgadnij liczbę</h3>
-            <p class="portfolio-example-description">Aplikacja sprawdza czy zgadłeś liczbę z&nbsp;przedziału od 1&nbsp;do 10. Masz na to trzy próby.</p>
+            <p class="portfolio-example-description">Aplikacja sprawdza czy zgadłeś liczbę z&nbsp;przedziału od
+              1&nbsp;do 10. Masz na to trzy próby.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -432,7 +450,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Gra w kafelki</h3>
-            <p class="portfolio-example-description">W grze musisz odkrywać pary kafelków o&nbsp;tym samym kolorze. Na końcu pokazuje Ci czas w&nbsp;jakim to zrobiłeś.</p>
+            <p class="portfolio-example-description">W grze musisz odkrywać pary kafelków o&nbsp;tym samym kolorze. Na
+              końcu pokazuje Ci czas w&nbsp;jakim to zrobiłeś.</p>
           </div>
         </figure>
       </div>
@@ -452,7 +471,8 @@
         <a class="link" href="https://github.com/KP1976" target="_blank" aria-label="GitHub" rel="noopener">
           <i class="fab fa-github"></i>
         </a>
-        <a class="link" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank" aria-label="LinkedIn" rel="noopener">
+        <a class="link" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank" aria-label="LinkedIn"
+          rel="noopener">
           <i class="fab fa-linkedin-in"></i>
         </a>
       </div>
@@ -510,7 +530,8 @@
             <span class="desc-bold">Urząd miejski
               <br>w Świnoujściu</span>
           </p>
-          <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+          <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
+            i&nbsp;obsługi systemu Windows
           </div>
           <div class="desc2">instalacja i wymiana kabli sieciowych</div>
         </div>
@@ -521,7 +542,8 @@
             <span class="desc-bold">Urząd miejski
               <br>w Świnoujściu</span>
           </p>
-          <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+          <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
+            i&nbsp;obsługi systemu Windows
           </div>
           <div class="desc2">instalacja i wymiana kabli sieciowych</div>
         </div>
