--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
     crossorigin="anonymous">
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="css/main.css">.
+  <link rel="stylesheet" href="css/main.css">
   <title>Portfolio – Krzysztof Pawłowski</title>
 </head>
 
